# rss-reader

./: Dockerfile  Makefile  Makefile.docker  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  search.html  table.db
data/: entry_rules.txt  table.db
scripts/: config.js  config_local.js  config_python.js  dbworker.js  library.js  project.js  ui.js
src/: applogging.py  controller.py  dbconnection.py  entries.py  entrywriter.py  serializers.py  sourcedata.py  sources.py  sourcewriter.py  system.py  taskrunner.py
styles/: viewerzip.css
templates/: templates.py
tests/: test_taskrunner.py
